--- a/index.html
+++ b/index.html
@@ -1,1 +1,19 @@
+<!DOCTYPE html>
+<html lang="ru">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport"
+        content="wigth=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0,minimum-scale=1.0">
+        <meta http-equiv="X-UA-Compatible" content="ie=edge">
+        <title>Кладовочка</title> 
+    </head>
+        <body>
+            <div id="main">
+                <h1>Положить монеточку</h1>
+                <img>
+                <p>Выбери, как тебе удобнее</p>
+                <button id="buy">Оплатить</button>
+            </div>
+        </body>
+</html>
 
