--- a/index.html
+++ b/index.html
@@ -5,7 +5,62 @@
         <meta name="viewport"
         content="wigth=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0,minimum-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
-        <title>Кладовочка</title> 
+        <title>Кладовочка</title>
+        <style>
+            @import url("C:\Users\nomad\Desktop\KladovochkaBot\20011.ttf");
+
+            *{
+                margin: 0;
+                padding: 0;
+                box-sizing: border-box;
+            }
+
+            body {
+                font-family: 'Gardens CM Regular', sans-serif;
+                font-weight: 200;
+                color:pink;
+                background-color:lightblue;     
+            }
+
+            #main {
+                width: 100%;
+                padding: 20px;
+                text-align: center;
+            }
+
+            h1 {
+                margin-top: 50px;
+                margin-bottom: 10px;
+            }
+
+            img {
+                width: 70px;
+                margin: 30px auto;
+            }
+
+            p {
+                width: 70px;
+                margin: 30px auto;
+            }
+
+            button {
+                border: 0;
+                border-radius: 5px;
+                margin-top: 50px;
+                height: 60px;
+                width: 200px;
+                font-size: 20px;
+                font-weight: 500;
+                cursor: pointer;
+                transition: all 500ms ease;
+                color:pink;
+                background: cadetblue;
+            }
+
+            button:hover{
+                background: cadetblue;
+            }
+        </style>
     </head>
         <body>
             <div id="main">
@@ -16,4 +71,3 @@
             </div>
         </body>
 </html>
-
